; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_NextPredXact.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_NextPredXact.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32, i32 }

@PredXactListElementData = common dso_local global i32 0, align 4
@link = common dso_local global i32* null, align 8
@PredXact = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @NextPredXact to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @NextPredXact(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @ShmemAddrIsValid(i32* %5)
  %7 = call i32 @Assert(i32 %6)
  %8 = load i32*, i32** %3, align 8
  %9 = bitcast i32* %8 to i8*
  %10 = load i32, i32* @PredXactListElementData, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = call i8* @offsetof(i32 %10, i32* %11)
  %13 = ptrtoint i8* %9 to i64
  %14 = ptrtoint i8* %12 to i64
  %15 = sub i64 %13, %14
  %16 = load i32, i32* @PredXactListElementData, align 4
  %17 = load i32*, i32** @link, align 8
  %18 = call i8* @offsetof(i32 %16, i32* %17)
  %19 = getelementptr inbounds i8, i8* %18, i64 %15
  %20 = bitcast i8* %19 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %20, %struct.TYPE_3__** %4, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** @PredXact, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  %25 = load i32, i32* @PredXactListElementData, align 4
  %26 = load i32*, i32** @link, align 8
  %27 = call i8* @offsetof(i32 %25, i32* %26)
  %28 = call i64 @SHMQueueNext(i32* %22, i32* %24, i8* %27)
  %29 = inttoptr i64 %28 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %29, %struct.TYPE_3__** %4, align 8
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %31 = icmp ne %struct.TYPE_3__* %30, null
  br i1 %31, label %33, label %32

32:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %36

33:                                               ; preds = %1
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  store i32* %35, i32** %2, align 8
  br label %36

36:                                               ; preds = %33, %32
  %37 = load i32*, i32** %2, align 8
  ret i32* %37
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @ShmemAddrIsValid(i32*) #1

declare dso_local i8* @offsetof(i32, i32*) #1

declare dso_local i64 @SHMQueueNext(i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
